2006-04-06  Vince Darley <vincentdarley@users.sourceforge.net>

	* macosx/tkMacOSXMouseEvent.c: now that [wm attributes -titlepath]
	works correctly, add OS support for dragging proxy icons and 
	using the titlepath menu.

2006-04-06  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (WmAttributesCmd, WmIconbitmapCmd): fix errors
	in setting/removing window proxy icons via [wm attributes -titlepath]
	and [wm iconbitmap], use HIWindow API on Tiger or later. [Bug 1455241]
	
	* unix/tcl.m4: remove TCL_IO_TRACK_OS_FOR_DRIVER_WITH_BAD_BLOCKING
	define on Darwin. [Tcl Bug 1457515]
	* unix/configure: autoconf-2.59
	* unix/tkConfig.h.in: autoheader-2.59

2006-04-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkWindow.c (Initialize): remove impotent use of
	DeleteWindowsExitProc as a global exit handler.

	* generic/tkMenu.c (TkSetWindowMenuBar): remove extra TkMenuInit
	call that caused finalization panic. [Bug 1456851]
	* win/tkWinMenu.c (FreeID, TkpNewMenu, MenuExitHandler) 
	(MenuThreadExitHandler, TkpMenuInit, TkpMenuThreadInit): rework
	Windows menu init/finalization to better respect per-process and
	per-thread boundaries. [Bug 1456851]
	(TkWinMenuKeyObjCmd): Do not error when unknown window is passed
	in. [Bug 1236306]

	* win/tkWinX.c (TkWinXInit): init default keyboard charset
	correctly. [Bug 1374119] (pajas)

	* win/tkWinWm.c (WmProc): pass WM_QUERYENDSESSION message to Tk as
	WM_SAVE_YOURSELF wm protocol callback.

	* tests/textWind.test (textWind-10.6.1): prevent infinite update
	loop in case of test failure

	* tests/wm.test (wm-attributes-1.2.4): correct expected result.

	* tests/grid.test: fix segfault on empty or "all" index list
	* generic/tkGrid.c (GridRowColumnConfigureCommand): [Bug 1422430]

2006-04-05  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: fix to crash caused on some platforms
        by new tests introduced to check for [Bug 1414171], which